// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb > renders empty list 1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 break-words text-sm sm:gap-2.5"
    />
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb > renders root path 1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 break-words text-sm sm:gap-2.5"
    >
      <li
        class="inline-flex items-center gap-1.5"
      >
        <a
          class="transition-colors"
          href="/"
        >
          Home
        </a>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb > shows labeled paths 1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 break-words text-sm sm:gap-2.5"
    >
      <li
        class="inline-flex items-center gap-1.5"
      >
        <a
          class="transition-colors"
          href="/profile"
        >
          My Profile
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:w-3.5 [&>svg]:h-3.5"
        role="presentation"
      >
        <svg
          class="lucide lucide-slash"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 2 2 22"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
      >
        <a
          class="transition-colors"
          href="/profile/edit"
        >
          Edit Profile
        </a>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb > shows unlabeled paths 1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 break-words text-sm sm:gap-2.5"
    >
      <li
        class="inline-flex items-center gap-1.5"
      >
        <a
          class="transition-colors"
          href="/"
        >
          dashboard
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:w-3.5 [&>svg]:h-3.5"
        role="presentation"
      >
        <svg
          class="lucide lucide-slash"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 2 2 22"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
      >
        <a
          class="transition-colors"
          href="/profile"
        >
          profile
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:w-3.5 [&>svg]:h-3.5"
        role="presentation"
      >
        <svg
          class="lucide lucide-slash"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 2 2 22"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
      >
        <a
          class="transition-colors"
          href="/profile/edit"
        >
          edit
        </a>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
